# Multi-Functional-Discord-Bot

./: .env  .env.template  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yaml  emails.csv  main.py  pyproject.toml  requirements.txt  snippettest.py
assets/: list.json  routes.json
cogs/: chess.py  cooking.py  info.py  reaction.py  transport.py  trivia.py  util.py
