[tool.poetry]
name = "multi-functional-discord-bot"
version = "0.2.4"
description = "Discord Bot With Different Functions"
authors = []
license = "MIT"
readme = "README.md"
packages = [{ include = "cogs" }]

[tool.poetry.dependencies]
python = "^3.11"
"chess.com" = "^2.0.6"
"discord.py" = "^2.3.1"
python-dotenv = "^1.0.0"
python-lichess = "^0.10"
requests = "*"
discord-pretty-help = "^2.0.7"
asyncpg = "^0.28.0"
jishaku = "^2.5.2"
staticmap = "^0.5.7"
requests-cache = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
